# GuitarVSTi

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
data/factory/banks/: Factory.bank.json
data/factory/templates/: Template1.json  Template2.json  Template3.json  Template4.json  Template5.json
docs/: architecture.md  midi_rules.md  preset_format.md  realtime_rules.md
modules/coredsp/: CMakeLists.txt
modules/coredsp/include/gn/: BodyResonator.h  CoreVoice.h  DspUtilities.h  NoiseLayer.h  PickExciter.h  SmoothValue.h  WaveguideString.h
modules/coredsp/src/: BodyResonator.cpp  CoreVoice.cpp  DspUtilities.cpp  NoiseLayer.cpp  PickExciter.cpp  SmoothValue.cpp  WaveguideString.cpp
modules/performance/: CMakeLists.txt
modules/performance/include/gnperf/: PerformanceEngine.h  PlayEvent.h
modules/performance/src/: PerformanceEngine.cpp
modules/presetengine/: CMakeLists.txt
modules/presetengine/include/gnpreset/: Json.h  PresetEngine.h
modules/presetengine/src/: Json.cpp  PresetEngine.cpp
plugin/guitarnexus_vsti/: CMakeLists.txt
plugin/guitarnexus_vsti/Source/: MinimalJuce.cpp  MinimalJuce.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugin/guitarnexus_vsti/Source/ui/: MacroPanel.cpp  MacroPanel.h  PresetBrowserComponent.cpp  PresetBrowserComponent.h
scripts/: build_windows_vs2022.bat  package_release.bat
tools/: offline_demo.cpp
tools/bankpacker/: CMakeLists.txt  main.cpp
tools/presetgen/: CMakeLists.txt  main.cpp
